ipc/ipdl/test/ipdl/error/maybe_SelfRecStruct.ipdl
//error: struct `X' is only partially defined

struct X {
    X? x;
};

[ChildProc=any]
protocol maybe_SelfRecStruct {
child: async Msg(X? aa);
};
